# Infopedia

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  exceptions.py  main.py  pyproject.toml  requirements.txt
celery_app/: app.py  search_task.py
config_data/: config.py
database/: connection.py  create_tables.py  db.py  db_counters.py  db_feature_usage.py  db_feedback.py  db_search.py  db_statistics.py  db_terms.py  db_users.py  incoming_terms.json  loader.py  models.py
enums/: features.py  grades.py  roles.py
filters/: filters.py
fsm/: states.py
handlers/: admin_handlers.py  inline_handlers.py  language_handlers.py  menu_handlers.py  register_handlers.py  subscription_handlers.py  unfollowed_handlers.py  user_handlers.py
i18n/: translator.py
keyboards/: inline_keyboards.py  main_menu.py  menu_commands.py
locales/: kz.py  ru.py
logs/: log_filters.py  logging_settings.py
middlewares/: database.py  feature_usage.py  i18n.py  language_settings.py  membership.py  registration.py  shadow_ban.py  statistics.py  throttler.py
migrations/: create_tables.py
schemas/: feedback.py  user.py
scripts/: prepare_app.py
services/: builder_service.py  data.py  definition_search_service.py  definition_service.py  factories.py  feature_usage.py  feedback_service.py  markdown.py  membership.py  mention.py  nlp.py  notification_service.py  search.py  signature.py  term_service.py  terms.py  terms_json.py  text.py  user_service.py
ui/: progressive_messages.py
utils/: callback_factories.py
