[project]
name = "infopedia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==25.1.0",
    "aiogram==3.24.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "cachetools==6.2.4",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "cssselect==1.4.0",
    "environs==14.5.0",
    "faiss-cpu==1.13.2",
    "filelock==3.20.3",
    "frozenlist==1.8.0",
    "fsspec==2026.1.0",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "lxml==6.0.2",
    "magic-filter==1.0.12",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==4.2.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "networkx==3.6.1",
    "nltk==3.9.2",
    "numpy==2.4.1",
    "nvidia-ml-py==13.590.48",
    "packaging==25.0",
    "pdfminer-six==20260107",
    "pdfplumber==0.11.9",
    "pgvector==0.4.2",
    "pillow==12.1.0",
    "propcache==0.4.1",
    "psutil==7.2.1",
    "psycopg==3.3.2",
    "psycopg-binary==3.3.2",
    "psycopg-pool==3.3.0",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pymupdf==1.26.7",
    "pypdfium2==5.3.0",
    "pytesseract==0.3.13",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "rapidfuzz==3.13.0",
    "redis==6.4.0",
    "regex==2025.9.18",
    "requests==2.32.5",
    "rich==14.2.0",
    "ruff==0.14.14",
    "safetensors==0.7.0",
    "scalene==2.1.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "sentence-transformers==5.2.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "soupsieve==2.8.1",
    "sqlalchemy==2.0.45",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "transformers==4.57.5",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "yarl==1.22.0",
]

[tool.ruff]
extend = "C:/Users/roman/AppData/Roaming/ruff/ruff.toml"