[project]
name = "infopedia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.24.0",
    "cachetools==6.2.4",
    "celery>=5.6.2",
    "environs==14.5.0",
    "numpy==2.4.1",
    "pgvector==0.4.2",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "redis==6.4.0",
    "requests>=2.33.0",
    "sentence-transformers==5.2.0",
    "sqlalchemy==2.0.45",
    "torch==2.9.1",
]

[tool.ruff]
extend = "C:/Users/roman/AppData/Roaming/ruff/ruff.toml"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
]
